[tool.poetry]
name = "rclinklab"
version = "0.1.0"
description = ""
authors = ["Anders Olsson"]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^23.2.0"
bitarray = "^2.9.2"
devtools = {extras = ["pygments"], version = "^0.9.0"}
evdev = "^1.7.0"
humanize = "^4.9.0"
jupyterlab = "^4.1.3"
pandas = "^2.2.1"
plotly = "^5.19.0"
psutil = "^5.9.8"
pydantic = "^2.6.3"
scipy = "^1.12.0"
structlog = "^24.1.0"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^24.2.0"}
coverage = {extras = ["toml"], version = "^7.4.3"}
Flake8-pyproject = "^1.2.3"
ipython = "^8.22.2"
isort = "^5.13.2"
jupyter = "^1.0.0"
mypy = "^1.8.0"
pandas-stubs = "2.2.0.240218"
pre-commit = "^3.6.2"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
rcl = "rclinklab.cli:app"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"

[[tool.mypy.overrides]]
module = ["evdev.*", "scipy.*", "plotly.*", "psutil"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["rclinklab"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"

[tool.pycln]
all = true

[tool.flake8]
ignore = ['E231', 'E241']
max-line-length = 119
count = true
